tests/fixtures/errors/unknown_type.cpp
// Test: unknown type (starts with capital T)
int foo() {
    TypeX x;
    return 0;
}